--- a/skills.html
+++ b/skills.html
@@ -87,7 +87,7 @@
 
   
   <ul class="navbar">
-    <li><a href="portfolio.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="skills.html">Skills</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
